--- a/src/globals.scss
+++ b/src/globals.scss
@@ -4,11 +4,9 @@
 
 body {
     min-height: 100vh;
-    background-color: #0c002e;
-    background-image: radial-gradient(at 100% 100%, rgb(84, 2, 103) 0px, transparent 50%), radial-gradient(at 0% 0%, rgb(97, 0, 118) 0px, transparent 50%);
     padding: 0;
     display: flex;
-    color: #eee;
+    overscroll-behavior-y: none;
 }
 
 #root {
