feat: add custom font and bg

--- a/src/globals.scss
+++ b/src/globals.scss
@@ -2,10 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap');
+
 body {
     min-height: 100vh;
     padding: 0;
     display: flex;
+    background-color: #0c002e;
+    background-image: radial-gradient(at 100% 100%, rgb(84, 2, 103) 0px, transparent 50%), radial-gradient(at 0% 0%, rgb(97, 0, 118) 0px, transparent 50%);
     overscroll-behavior-y: none;
 }
 
